Feature/context engineering platform (#2)
DriftKit 0.9.0 — Context Engineering Platform rebuild

Frontend migrated from Vue CLI to Vite + PrimeVue (Aura) with a sidebar layout. New pages: Dashboard, Prompts, Traces, TestSets, Pipelines, Playground, Chat. Removed 8 dead components and a hardcoded production IP.

Prompt lifecycle state machine: DRAFT → AUTO_TESTING → MANUAL_TESTING → CURRENT (+ REPLACED). Auto-incremented versions, diff viewer, restore, audit log with performedBy from Basic auth. Inline variable schema editor (type, required, default, description).

Pipelines: PipelineRegistry with auto-registration for Sequential/Loop agents via .name(). Pipeline Test Runner intercepts prompts via PromptOverrideContext (ThreadLocal). Hierarchical tracing — workflowId / workflowStep propagate across the pipeline. Playground supports A/B compare, Dataset Sweep, and Pipeline runs.

Environments: PromptEnvironment (method + language + environment + version). Resolution chain: override → environment → CURRENT. New endpoints for environments and promotion.

Observability: cache hit/write/miss tokens and hit ratio per trace, estimated cost (USD) via CostCalculator (OpenAI, Claude, DeepSeek, Gemini pricing with cache discounts). Nightly regression detection job re-runs pipeline tests and compares pass rates.

Client fixes: Claude cache_control preserved on system messages (was stripped), @JsonIgnore on getSystemAsString() (fixed 400 error). DeepSeek cache metrics verified with real API (hit=384, miss=44, ratio=0.90).

Code review pass: XSS sanitization with DOMPurify, SimpleDateFormat → DateTimeFormatter, synchronized version increment, @PreDestroy on executors, AbortController on polling, alert() → PrimeVue Toast, NPE guards, proper imports instead of FQNs.

Tests: 89 unit tests + integration tests for DeepSeek (8), Claude cache policy (4), and full E2E (InMemory prompts → LLMAgent → DeepSeek → Tracing). All passing.

Dev tooling: DriftKitDevRunner Spring Boot test runner o